--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
-    "react-intersection-observer": "^9.5.2",
     "react-scripts": "5.0.1",
+    "react-scrollspy": "^3.4.3",
+    "react-ui-scrollspy": "^2.3.0",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
