--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2",
     "react-scripts": "5.0.1",
     "react-scrollspy": "^3.4.3",
     "react-ui-scrollspy": "^2.3.0",
+    "redux": "^4.2.1",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
